...
    /// - Parameter completion: 결과를 반환하는 클로저입니다.
    /// 성공 시 `.success(ExchangeRateData)`를 반환하며,
    /// 실패 시 `.failure(DataError)` 또는 `Error`를 반환합니다.
    func fetchData(completion: @escaping (Result<ExchangeRateData, Error>) -> Void) {
        
        /// API의 기본 URL (USD 기준 환율)
        guard let url = URL(string: "https://open.er-api.com/v6/latest/USD") else {
            completion(.failure(DataError.invalidURL))
            return
        }
        
        // URLRequest 설정
        var request = URLRequest(url: url)
...
