...
    
    let amountTextField: UITextField = {
        let textField = UITextField()
        textField.borderStyle = .roundedRect
        textField.keyboardType = .decimalPad
        textField.textAlignment = .center
        textField.placeholder = "금액을 입력하세요"
        textField.textColor = UIColor(named: "TextColor") ?? .label
        
        return textField
    }()
    
    private let convertButton: UIButton = {
...
